[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Inventory/Slot.gd" type="Script" id=1]
[ext_resource path="res://Assets/Items/Sprites/wrench.png" type="Texture" id=2]
[ext_resource path="res://Assets/Inventory/Invisible slot.png" type="Texture" id=3]
[ext_resource path="res://Assets/Themes/Inventory.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Themes/InventoryTheme.tres" type="Theme" id=5]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0.211765, 0.223529, 0.247059, 0.454902, 0.211765, 0.223529, 0.247059, 0.454902 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 32

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.125, 13.125 )

[node name="Slot" type="Button"]
anchor_left = 0.017
anchor_top = 0.029
anchor_right = 0.017
anchor_bottom = 0.029
margin_left = -21.76
margin_top = -20.88
margin_right = 20.24
margin_bottom = 21.12
rect_min_size = Vector2( 42, 42 )
theme = ExtResource( 4 )
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotBorder" type="TextureRect" parent="."]
margin_right = 42.0
margin_bottom = 42.0
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotBackground" type="TextureRect" parent="."]
margin_right = 210.0
margin_bottom = 210.0
rect_scale = Vector2( 0.2, 0.2 )
texture = SubResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefaultPosition" type="Position2D" parent="."]
position = Vector2( 21, 21 )
scale = Vector2( 4, 4 )

[node name="ItemTexture" type="TextureRect" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 38.0
margin_bottom = 38.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemAmount" type="RichTextLabel" parent="."]
margin_left = 4.0
margin_top = 21.0
margin_right = 43.0
margin_bottom = 46.0
theme = ExtResource( 5 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetectItem" type="Area2D" parent="."]
position = Vector2( -85, -84 )
scale = Vector2( 4, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectItem"]
position = Vector2( 26.5, 26.25 )
scale = Vector2( 0.4, 0.4 )
shape = SubResource( 3 )
